# sila2-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  list_sila_servers.py  pyproject.toml
fastapi_app/: Dockerfile  pyproject.toml
fastapi_app/app/: main.py
fastapi_app/app/routes/: health.py  sila_discovery.py
servers/: Dockerfile  GreetingProvider-v1_0.sila.xml  pyproject.toml
servers/my_sila2_package/: server.py
servers/my_sila2_package/feature_implementations/: greetingprovider_impl.py  stationprovider_impl.py
servers/station_server/: Dockerfile  pyproject.toml
servers/station_server/station_server/: server.py
servers/trolley_arm_server/: Dockerfile  pyproject.toml
servers/trolley_arm_server/trolley_arm_server/: server.py
servers/trolley_arm_server/trolley_arm_server/feature_implementations/: stationprovider_impl.py  trolleyarmprovider_impl.py
specs/station_server/: README.md
specs/trolley_arm_server/: README.md  StationProvider-v1_0.sila.xml  TrolleyArmProvider-v1_0.sila.xml
