[project]
name = "my_sila2_package"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["my_sila2_package*"]

[tool.setuptools.package-data]
"my_sila2_package.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
