[project]
name = "trolley-arm-server"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trolley_arm_server*"]

[tool.setuptools.package-data]
"trolley_arm_server.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
